# mini-rack-printables

./: .gitignore  LISCENSE  main.scad  pyproject.toml  readme.md  requirements.txt  scadm.json
.zed/: settings.json
examples/: blank_faceplate.scad  blank_faceplate.stl  face_plate_with_div.scad  face_plate_with_holder.3mf  face_plate_with_holder.scad  face_plate_with_jetkvm.scad  face_plate_with_keystone.scad  jetkvm.scad  jetkvm_trimmed.stl  one_part_face_plate.scad
models/: assembly_base.scad  base.scad  cutout.scad  dimensions.scad  dispatch.scad  div.scad  face_plate.scad  faceplate.scad  geometry.scad  layout.scad  part_base.scad  part_dispatch.scad  rect_cutout.scad  render.scad  render_assembly.scad  render_part.scad  shapes.scad
models/assemblies/: assembly_base.scad  face_plate.scad  render_assembly.scad
models/parts/: cutout.scad  div.scad  holder.scad  keystone.scad  part_base.scad  render_part.scad  stl.scad
src/mini_rack_printables/: __init__.py  dimensions.py
src/mini_rack_printables/assemblies/: face_plate.py
tests/: cutout.scadtest  div.scadtest  face_plate.scadtest  faceplate.scadtest  geometry.scadtest  layout.scadtest  rect_cutout.scadtest  test_assembly.scad  test_face_plate.py
tests/scadtests/: cutout.scadtest  face_plate.scadtest  holder.scadtest  test_assembly.scad
